--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,10 @@
             <artifactId>uap-java</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
