--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,13 +16,13 @@ security:
     confirmation-server-address: http://localhost:8080
   encryption:
     access-token:
-      expiration-time: ${SECURITY_ACCESS_TOKEN_EXPIRATION_TIME:-'604800000'}
-      signing-key: ${SECURITY_ACCESS_TOKEN_SIGNING_KEY:-}
+      expiration-time: '${SECURITY_ACCESS_TOKEN_EXPIRATION_TIME:-604800000}'
+      signing-key: ${SECURITY_ACCESS_TOKEN_SIGNING_KEY}
     refresh-token:
-      expiration-time: ${SECURITY_REFRESH_TOKEN_EXPIRATION_TIME:-'1209600000'}
-      signing-key: ${SECURITY_REFRESH_TOKEN_SIGNING_KEY:-}
+      expiration-time: '${SECURITY_REFRESH_TOKEN_EXPIRATION_TIME:-1209600000}'
+      signing-key: ${SECURITY_REFRESH_TOKEN_SIGNING_KEY}
 app:
-  time-for-account-recovery: ${APP_TIME_FOR_ACCOUNT_RECOVERY:-'60000'}
+  time-for-account-recovery: '${APP_TIME_FOR_ACCOUNT_RECOVERY:-60000}'
 spring:
   jpa:
     database: postgresql
