--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     restart: unless-stopped
 
   spring-boot:
-    image: business-service-spring-boot:0.0.5
+    image: messenger-spring-boot:0.0.5
     build:
       context: .
       dockerfile: Dockerfile
